--- a/CPP.Framework.EntityData/CPP.Framework.EntityData.csproj
+++ b/CPP.Framework.EntityData/CPP.Framework.EntityData.csproj
@@ -106,7 +106,7 @@
     <Compile Include="Data\Entities\DataEntityNameMissingException.cs" />
     <Compile Include="Data\Entities\InvalidDataEntityException.cs" />
     <Compile Include="Data\Entities\InvalidDataEntityRelationException.cs" />
-    <Compile Include="ErrorStrings.cs" />
+    <Compile Include="EntityDataErrorStrings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="_NET\CPP\Framework\Diagnostics\JournalSourceExtensions.cs" />
   </ItemGroup>
