--- a/CPP.Framework.UnitTests/CPP.Framework.UnitTests.csproj
+++ b/CPP.Framework.UnitTests/CPP.Framework.UnitTests.csproj
@@ -28,8 +28,10 @@
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
     <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.1" />
+    <PackageReference Include="FluentAssertions" Version="7.1.*" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.6.3" />
     <PackageReference Include="MSTest.TestFramework" Version="3.6.3" />
+    <PackageReference Include="NSubstitute" Version="5.*" />
     <PackageReference Include="RhinoMocks" Version="3.6.1" />
   </ItemGroup>
 
